[PURPLE-107] 피드백 반영